PS-976 Test fixes

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "ProductDiscontinuedProductLabelConnector module",
   "license": "proprietary",
   "require": {
+    "php": ">=7.1",
     "spryker/kernel": "^3.0.0",
     "spryker/locale": "^3.0.0",
     "spryker/product": "^6.2.0",
@@ -20,7 +21,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Spryker\\": "src/Spryker/"
+      "Spryker\\": "src/Spryker/",
+      "SprykerTest\\Zed\\ProductDiscontinuedProductLabelConnector\\Helper\\": "tests/SprykerTest/Zed/ProductDiscontinuedProductLabelConnector/_support/Helper/"
     }
   },
   "autoload-dev": {
