TE-10886 Dynamic store. (#9457)
TE-10886 Release Dynamic Store

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=8.0",
         "spryker/kernel": "^3.30.0",
-        "spryker/locale": "^3.0.0",
+        "spryker/locale": "^3.0.0 || ^4.0.0",
         "spryker/product": "^6.11.0",
         "spryker/product-discontinued": "^1.0.0",
         "spryker/product-discontinued-extension": "^1.2.0",
